Add displaying of real queues

--- a/frontend/all-queues/styles.css
+++ b/frontend/all-queues/styles.css
@@ -161,4 +161,11 @@ body {
           justify-content: flex-end;
       }
   }
+
+  a.queue {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
   
